--- a/src/custom-elements/example.html
+++ b/src/custom-elements/example.html
@@ -1,3 +1,3 @@
 <template>
-    <button click.trigger="speak()">Say Hello To ${to}</button>
+    <button class="btn btn-primary" click.trigger="speak()">Say Hello To ${to}</button>
 </template>
